<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.RegisterActivity">

    <!-- Toolbar -->
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0FDF4"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pr_icon"
            android:contentDescription="@string/register_toolbar_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/register_toolbar_title"
            android:textColor="#0BAE77"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Sign Up Header -->
    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/register_title"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableEnd="@drawable/ic_person"
        android:drawableTint="@color/colorAccent"
        android:hint="@string/register_username"
        android:inputType="textPersonName"
        android:padding="12dp" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableEnd="@drawable/ic_email"
        android:drawableTint="@color/colorAccent"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <!-- Phone Input -->
    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableEnd="@drawable/ic_phone"
        android:drawableTint="@color/colorAccent"
        android:hint="@string/register_phone"
        android:inputType="phone"
        android:padding="12dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableEnd="@drawable/ic_visibility_off"
        android:drawableTint="@color/colorAccent"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <!-- Password Confirm Input -->
    <EditText
        android:id="@+id/edtPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableEnd="@drawable/ic_visibility_off"
        android:drawableTint="@color/colorAccent"
        android:hint="@string/register_password_confirm"
        android:inputType="textPassword"
        android:padding="12dp" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_button"
        android:padding="14dp"
        android:text="@string/register_signup"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <!-- Sign In Link -->
    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/register_signin"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

</LinearLayout>
